# DMA_Framework

./: .gitignore  README.md
.github/workflows/: build_clang_tidy.yml  build_linux.yml  build_windows.yml
dma_framework/: CMakeLists.txt
dma_framework/cmake/: CMakeLists_Helper.txt  CMakeLists_dma_plantuml.txt.in
dma_framework/include/base/: TNumberedObject.hpp
dma_framework/include/dma/base/: ForceLink.hpp  Guard.hpp  GuardedCallback.hpp  INamedObject.hpp  TNumberedObject.hpp
dma_framework/include/dma/base/doc/: doc.md
dma_framework/include/dma/base/initializable/: CBaseSynchronousInitializable.hpp  ISynchronousInitializable.hpp
dma_framework/include/dma/component/: IComponent.hpp
dma_framework/include/dma/component/doc/: doc.md
dma_framework/src/: CMakeLists.txt  CreateClassDiagrams.cpp
dma_framework/src/base/: CMakeLists.txt  Guard.cpp  GuardedCallback.cpp  INamedObject.cpp
dma_framework/src/base/initializable/: CBaseSynchronousInitializable.cpp  CMakeLists.txt
dma_framework/src/component/: CMakeLists.txt  IComponent.cpp
dma_framework/src/event/: CMakeLists.txt
dma_framework/test/: CMakeLists.txt  UT.cpp  UT_TNumberedObject.cpp
dma_framework/test/base/: CMakeLists.txt  UT_CBaseSynchronousInitializable.cpp  UT_Guard.cpp  UT_TNumberedObject.cpp
md/base/: base.md
md/dev_docs/: dev_docs.md
md/dev_docs/puml/: DMA_Framework_Base.puml  DMA_Framework_Base_standalone.puml
md/repo_size/: repo_size.md
